--- a/C1.css
+++ b/C1.css
@@ -13,7 +13,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #8e43e7;
+  --primary: #0e1c82;
   --secondary: #273c66;
   --success: #28a745;
   --info: #17a2b8;
@@ -127,7 +127,7 @@ sup {
   top: -.5em; }
 
 a {
-  color: #8e43e7;
+  color: #0e1c82;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
@@ -1816,8 +1816,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #8e43e7;
-  border-color: #8e43e7; }
+  background-color: #0e1c82;
+  border-color:#0e1c82; }
   .btn-primary:hover {
     color: #fff;
     background-color: #7a21e3;
@@ -1829,8 +1829,8 @@ fieldset:disabled a.btn {
     box-shadow: 0 0 0 0.2rem rgba(159, 95, 235, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #8e43e7;
-    border-color: #8e43e7; }
+    background-color: #0e1c82;
+    border-color:#0e1c82; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
@@ -2023,22 +2023,22 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #8e43e7;
-  border-color: #8e43e7; }
+  color: #0e1c82;
+  border-color: #0e1c82; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #8e43e7;
-    border-color: #8e43e7; }
+    background-color: #0e1c82;
+    border-color:#0e1c82; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
     box-shadow: 0 0 0 0.2rem rgba(142, 67, 231, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #8e43e7;
+    color: #0e1c82;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #8e43e7;
-    border-color: #8e43e7; }
+    background-color: #0e1c82;
+    border-color: #0e1c82; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(142, 67, 231, 0.5); }
@@ -2192,7 +2192,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #8e43e7;
+  color: #0e1c82;
   text-decoration: none; }
   .btn-link:hover {
     color: #6719c4;
@@ -2427,7 +2427,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #8e43e7; }
+    background-color: #0e1c82; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -2703,8 +2703,8 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #8e43e7;
-    background-color: #8e43e7; }
+    border-color: #0e1c82;
+    background-color: #0e1c82; }
   .custom-control-input:focus ~ .custom-control-label::before {
     box-shadow: 0 0 0 0.2rem rgba(142, 67, 231, 0.25); }
   .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
@@ -2750,8 +2750,8 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #8e43e7;
-  background-color: #8e43e7; }
+  border-color: #0e1c82;
+  background-color: #0e1c82; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"); }
@@ -2922,7 +2922,7 @@ input[type="button"].btn-block {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #8e43e7;
+    background-color: #0e1c82;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2944,7 +2944,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #8e43e7;
+    background-color: #0e1c82;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2969,7 +2969,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #8e43e7;
+    background-color: #0e1c82;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3062,7 +3062,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #8e43e7; }
+  background-color: #0e1c82; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3544,7 +3544,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #8e43e7;
+  color: #0e1c82;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
@@ -3570,8 +3570,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #8e43e7;
-  border-color: #8e43e7; }
+  background-color: #0e1c82;
+  border-color: #0e1c82; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3636,7 +3636,7 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #fff;
-  background-color: #8e43e7; }
+  background-color: #0e1c82; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #fff;
     background-color: #731cdb; }
@@ -3850,7 +3850,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #8e43e7;
+  background-color: #0e1c82;
   transition: width 0.6s ease; }
   @media (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -3913,8 +3913,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #8e43e7;
-    border-color: #8e43e7; }
+    background-color: #0e1c82;
+    border-color: #0e1c82; }
   .list-group-item + .list-group-item {
     border-top-width: 0; }
     .list-group-item + .list-group-item.active {
@@ -4747,7 +4747,7 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #8e43e7 !important; }
+  background-color: #0e1c82 !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
@@ -4847,7 +4847,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #8e43e7 !important; }
+  border-color: #0e1c82 !important; }
 
 .border-secondary {
   border-color: #273c66 !important; }
@@ -7088,7 +7088,7 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #8e43e7 !important; }
+  color: #0e1c82 !important; }
 
 a.text-primary:hover, a.text-primary:focus {
   color: #6719c4 !important; }
@@ -9545,7 +9545,7 @@ a.text-dark:hover, a.text-dark:focus {
   clip: auto; }
 
 :root {
-  --primary-color: #8e43e7;
+  --primary-color: #0e1c82;
   --secondary-color: #273c66;
   --font-color: #696969;
   --bg-color: #fff;
@@ -9560,7 +9560,7 @@ a.text-dark:hover, a.text-dark:focus {
   --widget-bg: #3f3a64; }
 
 [data-theme="dark"] {
-  --primary-color: #8e43e7;
+  --primary-color: #0e1c82;
   --secondary-color: #273c66;
   --font-color: #afafaf;
   --bg-color: #0b0d0e;
